feat: create api region at weather
